@@ -27,6 +27,7 @@ require 'lobbyist/appointment'
 require 'lobbyist/basic_auth'
 require 'lobbyist/category'
 require 'lobbyist/challenge_communication'
+require 'lobbyist/collection'
 require 'lobbyist/company_setting'
 require 'lobbyist/company_user'
 require 'lobbyist/company'
@@ -40,6 +41,7 @@ require 'lobbyist/member_call'
 require 'lobbyist/promo'
 require 'lobbyist/review_challenge'
 require 'lobbyist/review_comment'
+require 'lobbyist/review_confirmation'
 require 'lobbyist/review_flag'
 require 'lobbyist/review_suggestion'
 require 'lobbyist/review_topic'
