@@ -13,14 +13,15 @@ describe Lobbyist::ReviewChallenge do
   describe ':list' do
     it 'should return the found review_challenge' do
       headers = set_headers('get', '/v1/review_challenges.json', {'nonce' => @nonce})
-      body = [{id: 1, review_id: 20948, reason: 'not_a_customer', status: 'requested', read: 0, created_at: "#{Time.now.to_s}", updated_at: "#{Time.now.to_s}"},{id: 2, review_id: 20949, reason: 'not_a_customer', status: 'requested', read: 0, created_at: "#{Time.now.to_s}", updated_at: "#{Time.now.to_s}"}]
+      body = {count: 2, elements: [{id: 1, review_id: 20948, reason: 'not_a_customer', status: 'requested', read: 0, created_at: "#{Time.now.to_s}", updated_at: "#{Time.now.to_s}"},{id: 2, review_id: 20949, reason: 'not_a_customer', status: 'requested', read: 0, created_at: "#{Time.now.to_s}", updated_at: "#{Time.now.to_s}"}]}
       stub_get('/v1/review_challenges.json').with(:query => {'nonce' => @nonce}, headers => headers).to_return(body: body.to_json, status: 200)
       challenge = Lobbyist::ReviewChallenge.list
 
       challenge.should_not be_nil
-      challenge.should be_a(Array)
-      challenge[0].status.should == 'requested'
-      challenge[0].review_id.should == 20948
+      challenge.should be_a(Lobbyist::Collection)
+      challenge.count.should == 2
+      challenge.elements[0].status.should == 'requested'
+      challenge.elements[0].review_id.should == 20948
     end
   end
   
